--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    compile 'com.airbnb.android:lottie:2.2.5'
 
 }
